--- a/GW_Heterozygosity_Variance.qmd
+++ b/GW_Heterozygosity_Variance.qmd
@@ -568,55 +568,9 @@ println("Calculated population allele frequencies and sample sizes")
 
 # Calculate per-site pi (within-group nucleotide distance)
 
-# MOVED THIS FUNCTION TO SNPLOTS SO CAN DELETE HERE:
-#= """
-    getSitePi(freqs, sampleSizes)
-
-Calculate non-biased nucleotide diversity (pi) at each site for each population, with correction for sample size, using allele freqs and sample size as input.
-
-​# Arguments
-- `freqs`: Matrix containing alternate allele frequencies for each group (row) and SNP (column).
-- `sampleSizes`: Matrix containing sample sizes for each group (row) and SNP (column).
-"""
-function getSitePi(freqs, sampleSizes)
-    sitePi = @. 2freqs*(1 - freqs) * (2sampleSizes / (2sampleSizes - 1)) # the @. macro broadcasts the dot to each math operator in the formula
-    # change infinites (when sample_size is somehow 1) to NaN:
-    replace(sitePi, Inf => NaN)
-    return sitePi
-end =#
-
 sitePi = getSitePi(freqs, sampleSizes)
 
 # calculate pairwise Dxy per site, using data in "freqs" and groups in "groups"
-
-# MOVED THIS FUNCTION TO SNPLOTS SO CAN DELETE HERE:
-#= """
-    getDxy(freqs, groupsToCalc)
-
-Calculate per-locus Dxy (pi_between) for each pair of populations.
-
-# Arguments
-- `freqs`: Matrix containing alternate allele frequencies for each group (row) and SNP (column).
-- `groupsToCalc`: Vector containing the names of the groups corresponding to each row of `freqs`.
-
-# Notes
-Returns a tuple containing: 
-- Matrix of Dxy values for each comparison (row) and locus (column).
-- Vector of comparison names.
-"""
-function getDxy(freqs, groupsToCalc)
-    pairwiseNames = getPairwiseNames(groupsToCalc)
-    groupCount = length(groupsToCalc)
-    Dxy = Array{Float32, 2}(undef, length(pairwiseNames), size(freqs, 2))
-    rowCount = 1
-    for i in 1:(groupCount-1)
-        for j in (i+1):groupCount
-            Dxy[rowCount,:] = @. freqs[i,:]*(1-freqs[j,:]) + freqs[j,:]*(1-freqs[i,:])
-            rowCount += 1 # adds one to rowCount
-        end
-    end
-    return Dxy, pairwiseNames
-end =#
 
 Dxy, pairwiseDxyClusterNames = getDxy(freqs, clusterNames)
 
@@ -624,25 +578,9 @@ Fst, FstNumerator, FstDenominator, pairwiseFstClusterNames = getFst(freqs, sampl
 
 # Now get averages of pi and Dxy for whole region:
 
-meanPi = fill(-9.0, size(sitePi, 1))
-for i in axes(sitePi, 1)
-    # get real values (ignore NaN):
-    nums = sitePi[i, .!isnan.(sitePi[i,:])]
-    # get mean of those real values:
-    meanPi[i] = mean(nums)
-end
+regionPiTable = DataFrame(cluster = clusterNames, pi = getRegionPi(sitePi))
 
-regionPiTable = DataFrame(cluster = clusterNames, pi = meanPi)
-
-meanDxy = fill(-9.0, size(Dxy, 1))
-for i in axes(Dxy, 1)
-    # get real values (ignore NaN):
-    nums = Dxy[i, .!isnan.(Dxy[i,:])]
-    # get mean of those real values:
-    meanDxy[i] = mean(nums)
-end
-
-regionDxyTable = DataFrame(cluster_pair = pairwiseDxyClusterNames, Dxy = meanDxy)
+regionDxyTable = DataFrame(cluster_pair = pairwiseDxyClusterNames, Dxy = getRegionDxy(Dxy))
 
 #= julia> regionDxyTable
 15×2 DataFrame
@@ -690,23 +628,15 @@ Fst_selectedSNPs = Fst[:, selectedSNPs]
 freqs_selectedSNPs = freqs[:, selectedSNPs]
 
 # limit the number of individuals per group to plot
-
-# numIndsToPlot = [10, 10, 10, 10, 10, 10]
 numIndsToPlot = [15, 15, 15, 15, 15, 15]
 
-genosForGBI, indMetadataforGBI = limitIndsToPlot(clusterNames, numIndsToPlot, genos_selected, PCAmodel.metadata)
-
-# AS TEMP FIX, CHANGE ALL FST VALUES TO 0.0:
-# Fst_selectedSNPs .= 0.0
-
-#= plotInfo = plotGenotypeByIndividual(groupsToCompare, Fst_cutoff, missingFractionAllowed,
-    regionInfo, pos_selectedSNPs, Fst_selectedSNPs, pairwiseNamesFst,
-    genosForGBI, indMetadataforGBI, freqs_selectedSNPs, clusterNames, clusterColors; plotTitle = "") =#
+genosForGBI, indMetadataforGBI = limitIndsToPlot(clusterNames, numIndsToPlot, 
+                                            genos_selectedSNPs, PCAmodel.metadata;
+                                            sortByMissing = true)
 
 plotGenotypeByIndividual(regionInfo, pos_selectedSNPs,
                 genosForGBI, indMetadataforGBI, freqs_selectedSNPs, clusterNames, clusterColors;
                 missingFractionAllowed = missingFractionAllowed)
-
 ```
 
 # Do a PCA based on above info, on just the west side of the ring
@@ -781,8 +711,6 @@ PCAmodel = plotPCA(genotypes_lowHetVarRegion_imputed, ind_with_metadata_included
             showPlot = false)
 
 display(PCAmodel.PCAfig)
-
-
 ```
 
 
