--- a/GW_Heterozygosity_Variance.qmd
+++ b/GW_Heterozygosity_Variance.qmd
@@ -376,96 +376,132 @@ plotGenomeHetVariance(scaffolds_to_plot,
 
 # Choose low-het individuals in a high HetVar region
 
-Now that we have high HetVar regions indicated, we can automate the choosing of essential homozygous individuals in those regions. Here I will do this for chr15 and chr18:
+Now that we have high HetVar regions indicated, we can automate the choosing of essential homozygous individuals in those regions. Below I will do this for chrZ (and later chr15 and chr18).
+
+First, here's two functions, first for getting the boundaries of the longest high HetVar region from a scaffold, second for getting a bunch of info about the region:
+
+```{julia}
+function getOneHighHetVarRegion(highHetVarRegions, chr)
+    selection = (highHetVarRegions.regionChrom .== chr)
+    if sum(selection) == 1
+        println("Good news: 1 region on that scaffold")
+        positionMin = highHetVarRegions.regionStart[selection][1]
+        positionMax = highHetVarRegions.regionEnd[selection][1]
+        regionText = string("chr ", chr, " ",positionMin," to ",positionMax)
+    elseif sum(selection) > 1
+        println("More than 1 region on that scaffold. Using just the longest one.")
+        highHetVarRegions_chr = highHetVarRegions[selection, :]
+        display(highHetVarRegions_chr)
+        # get biggest region (first one if tied):
+        regionSizes = highHetVarRegions_chr.regionEnd .- highHetVarRegions_chr.regionStart
+        indexOfLongest = findfirst(regionSizes .== maximum(regionSizes))
+        positionMin = highHetVarRegions_chr.regionStart[indexOfLongest]
+        positionMax = highHetVarRegions_chr.regionEnd[indexOfLongest]
+        regionText = string("chr ", chr, " ",positionMin," to ",positionMax)
+    elseif sum(selection) == 0
+        println("No high HetVar regions on that scaffold")
+        return
+    end
+    return positionMin, positionMax, regionText
+end
+
+
+function getWindowedIndHetStanRegion(genos, pos, 
+                                    highHetVarRegions, chr;
+                                    windowSize = 500)
+    # remake the windowedIndHet_standardized (done above in a different cell)
+    loci_selection = (pos.chrom .== chr)
+    pos_region = pos[loci_selection, :]
+    genotypes_region = genos[:, loci_selection]
+    windowedPos, windowedIndHet = getWindowedIndHet(genotypes_region, pos_region, windowSize)
+    windowedIndHet_standardized = standardizeIndHet(windowedIndHet)
+    # look up the boundaries of the high HetVar region:
+    positionMin, positionMax, regionText = getOneHighHetVarRegion(highHetVarRegions, chr)
+    # choose just the windows that are in the high HetVar region:
+    window_selection = (positionMin .< windowedPos .< positionMax)
+    windowedIndHetStanRegion = windowedIndHet_standardized[:,window_selection]
+    meanAcrossRegionIndHetStan = mean.(eachrow(windowedIndHetStanRegion)) 
+    # choose loci in region
+    lociSelection = (positionMin .< pos_region.position .< positionMax)
+    pos_highHetVarRegion = pos_region[lociSelection, :]
+    genos_highHetVarRegion = genotypes_region[:, lociSelection]
+    # convert `-1` genotypes (which indicates missing) to `missing`:
+    replace!(genos_highHetVarRegion, -1 => missing)
+    regionInfo = chooseChrRegion(pos_highHetVarRegion, chr; positionMin=positionMin, positionMax=positionMax) # this makes appropriate text describing the region
+    return positionMin, positionMax, regionText, 
+            windowedIndHetStanRegion, meanAcrossRegionIndHetStan,
+            genos_highHetVarRegion, pos_highHetVarRegion, regionInfo
+end
+```
 
 ```{julia}
 # choose scaffold
 chr = "gwZ"
 
-# remake the windowedIndHet_standardized (done above in a different cell)
-windowSize = 500
-loci_selection = (pos_SNP_filtered.chrom .== chr)
-pos_region = pos_SNP_filtered[loci_selection, :]
-genotypes_region = genosOnly_included[:, loci_selection]
+positionMin, positionMax, regionText, 
+    windowedIndHetStanRegion, meanAcrossRegionIndHetStan,
+    genos_highHetVarRegion, pos_highHetVarRegion, regionInfo = 
+    getWindowedIndHetStanRegion(genosOnly_included, 
+                            pos_SNP_filtered, 
+                            highHetVarRegions, chr;
+                            windowSize = 500)
 
-windowedPos, windowedIndHet = getWindowedIndHet(genotypes_region, pos_region, windowSize)
+# inspect values for mean IndHetStan per individual for that high HetVar region
+plot(meanAcrossRegionIndHetStan)
 
-windowedIndHet_standardized = standardizeIndHet(windowedIndHet)
+# Add column to metadata containing the regionIndHetStan for this highHet region:
+command = "ind_with_metadata_included." * chr * "_regionIndHetStan = meanAcrossRegionIndHetStan"
+eval(Meta.parse(command)) # this executes the command constructed above
+ind_with_metadata_included.regionIndHetStan = meanAcrossRegionIndHetStan
 
-# look up the boundaries of the high HetVar region:
-
-selection = (highHetVarRegions.regionChrom .== chr)
-if sum(selection) == 1
-    println("Good news: 1 region on that scaffold")
-    positionMin = highHetVarRegions.regionStart[selection][1]
-    positionMax = highHetVarRegions.regionEnd[selection][1]
-    regionText = string("chr ", chr, " ",positionMin," to ",positionMax)
-elseif sum(selection) > 1
-    println("More than 1 region on that scaffold. Using just the longest one.")
-    highHetVarRegions_chr = highHetVarRegions[selection, :]
-    display(highHetVarRegions_chr)
-    # get biggest region (first one if tied):
-    regionSizes = highHetVarRegions_chr.regionEnd .- highHetVarRegions_chr.regionStart
-    indexOfLongest = findfirst(regionSizes .== maximum(regionSizes))
-    positionMin = highHetVarRegions_chr.regionStart[indexOfLongest]
-    positionMax = highHetVarRegions_chr.regionEnd[indexOfLongest]
-    regionText = string("chr ", chr, " ",positionMin," to ",positionMax)
-elseif sum(selection) == 0
-    println("No high HetVar regions on that scaffold")
-end
-
-# choose just the windows that are in the high HetVar region:
-
-selection = (positionMin .< windowedPos .< positionMax)
-windowedIndHet_standardized_region = windowedIndHet_standardized[:,selection]
-
-# average across windows for each individual:
-
-meanAcrossRegion_IndHet_standardized = mean.(eachrow(windowedIndHet_standardized_region)) 
-
-plot(meanAcrossRegion_IndHet_standardized)
-
-ind_with_metadata_included.regionIndHetStan = meanAcrossRegion_IndHet_standardized
+#names(ind_with_metadata_included)
 
 # check whether missing data related to heterozygosity (good news: not really)
-plot(ind_with_metadata_included.numMissings, ind_with_metadata_included.regionIndHetStan)
+plot(ind_with_metadata_included.numMissings, meanAcrossRegionIndHetStan)
 
 # to inspect data, sort by regionIndHetStan :
+#ind_with_metadata_included_sortedbyHetVar = sort(ind_with_metadata_included, [:regionIndHetStan])
 
-ind_with_metadata_included_sortedbyHetVar = sort(ind_with_metadata_included, [:regionIndHetStan])
+# PCA of all individuals:
+
+genos_highHetVarRegion_imputed = Impute.svd(Matrix{Union{Missing, Float32}}(genos_highHetVarRegion))
+
+flipPC1 = true
+flipPC2 = false
+
+PCAmodelAll = plotPCA(genos_highHetVarRegion_imputed, ind_with_metadata_included, 
+            groups_to_plot_PCA, group_colors_PCA; 
+            sampleSet = "greenish warblers", regionText = regionText,
+            flip1 = flipPC1, flip2 = flipPC2,
+            lineOpacity = 0.7, fillOpacity = 0.6,
+            symbolSize = 14, showTitle = true,
+            xLabelText = string("Region PC1"), yLabelText = string("Region PC2"),
+            showPlot = false)
+
+display(PCAmodelAll.PCAfig)
+
 
 # choose inds with low IndHet in high HetVar region:
-indSelection = (ind_with_metadata_included.regionIndHetStan .< 1.75)    # 0.75
-
+indSelection = (meanAcrossRegionIndHetStan .< 1.75)    # 0.75
 ind_with_metadata_lowIndHetStan = ind_with_metadata_included[indSelection, :]
 
-# choose the loci in the high HetVar region:
-lociSelection = (positionMin .< pos_region.position .< positionMax)
-
-pos_highHetVarRegion = pos_region[lociSelection, :]
-
-regionInfo = chooseChrRegion(pos_highHetVarRegion, chr; positionMin=positionMin, positionMax=positionMax) # this gets the maximum position for the chromosome
-
-geno_lowIndHetStan = genotypes_region[indSelection, lociSelection]
-
-# convert `-1` genotypes (which indicates missing) to `missing`:
-geno_lowIndHetStan[.!(ismissing.(geno_lowIndHetStan)) .&& geno_lowIndHetStan .== -1] .= missing
+genos_lowIndHetStan = genos_highHetVarRegion[indSelection, :]
 
 # check that missing genotypes are encoded as `missing` rather than `-1`:
-if sum(ismissing.(geno_lowIndHetStan)) == 0
+if sum(ismissing.(genos_lowIndHetStan)) == 0
     println("Warning: No `missing` genotypes to be imputed")
 end
 
 # impute missing genotypes:
 
-geno_lowIndHetStan_imputed = Impute.svd(Matrix{Union{Missing, Float32}}(geno_lowIndHetStan))
+genos_lowIndHetStan_imputed = Impute.svd(Matrix{Union{Missing, Float32}}(genos_lowIndHetStan))
 
 flipPC1 = true
 flipPC2 = true
 
-PCAmodel = plotPCA(geno_lowIndHetStan_imputed, ind_with_metadata_lowIndHetStan, 
+PCAmodel = plotPCA(genos_lowIndHetStan_imputed, ind_with_metadata_lowIndHetStan, 
             groups_to_plot_PCA, group_colors_PCA; 
-            sampleSet = "greenish warblers", regionText = regionText,
+            sampleSet = "greenish warblers (lowIndHetStan)", regionText = regionText,
             flip1 = flipPC1, flip2 = flipPC2,
             lineOpacity = 0.7, fillOpacity = 0.6,
             symbolSize = 14, showTitle = true,
@@ -713,6 +749,256 @@ PCAmodel = plotPCA(genotypes_lowHetVarRegion_imputed, ind_with_metadata_included
 display(PCAmodel.PCAfig)
 ```
 
+
+
+
+## Do similar as above chr Z analysis but for chr 15:
+
+```{julia}
+# choose scaffold
+chr = "gw15"
+
+positionMin, positionMax, regionText, 
+    windowedIndHetStanRegion, meanAcrossRegionIndHetStan,
+    genos_highHetVarRegion, pos_highHetVarRegion, regionInfo = 
+    getWindowedIndHetStanRegion(genosOnly_included, 
+                            pos_SNP_filtered, 
+                            highHetVarRegions, chr;
+                            windowSize = 500)
+
+# inspect values for mean IndHetStan per individual for that high HetVar region
+plot(meanAcrossRegionIndHetStan)
+
+# Add column to metadata containing the regionIndHetStan for this highHet region:
+command = "ind_with_metadata_included." * chr * "_regionIndHetStan = meanAcrossRegionIndHetStan"
+eval(Meta.parse(command)) # this executes the command constructed above
+ind_with_metadata_included.regionIndHetStan = meanAcrossRegionIndHetStan
+
+#names(ind_with_metadata_included)
+
+# check whether missing data related to heterozygosity (good news: not really)
+plot(ind_with_metadata_included.numMissings, meanAcrossRegionIndHetStan)
+
+# to inspect data, sort by regionIndHetStan :
+#ind_with_metadata_included_sortedbyHetVar = sort(ind_with_metadata_included, [:regionIndHetStan])
+
+# PCA of all individuals:
+
+genos_highHetVarRegion_imputed = Impute.svd(Matrix{Union{Missing, Float32}}(genos_highHetVarRegion))
+
+flipPC1 = true
+flipPC2 = true
+
+PCAmodelAll = plotPCA(genos_highHetVarRegion_imputed, ind_with_metadata_included, 
+            groups_to_plot_PCA, group_colors_PCA; 
+            sampleSet = "greenish warblers", regionText = regionText,
+            flip1 = flipPC1, flip2 = flipPC2,
+            lineOpacity = 0.7, fillOpacity = 0.6,
+            symbolSize = 14, showTitle = true,
+            xLabelText = string("Region PC1"), yLabelText = string("Region PC2"),
+            showPlot = false)
+
+display(PCAmodelAll.PCAfig)
+
+
+# choose inds with low IndHet in high HetVar region:
+indSelection = (meanAcrossRegionIndHetStan .< 1.75)    # 0.75
+ind_with_metadata_lowIndHetStan = ind_with_metadata_included[indSelection, :]
+
+genos_lowIndHetStan = genos_highHetVarRegion[indSelection, :]
+
+# check that missing genotypes are encoded as `missing` rather than `-1`:
+if sum(ismissing.(genos_lowIndHetStan)) == 0
+    println("Warning: No `missing` genotypes to be imputed")
+end
+
+# impute missing genotypes:
+
+genos_lowIndHetStan_imputed = Impute.svd(Matrix{Union{Missing, Float32}}(genos_lowIndHetStan))
+
+flipPC1 = true
+flipPC2 = true
+
+PCAmodel = plotPCA(genos_lowIndHetStan_imputed, ind_with_metadata_lowIndHetStan, 
+            groups_to_plot_PCA, group_colors_PCA; 
+            sampleSet = "greenish warblers (lowIndHetStan)", regionText = regionText,
+            flip1 = flipPC1, flip2 = flipPC2,
+            lineOpacity = 0.7, fillOpacity = 0.6,
+            symbolSize = 14, showTitle = true,
+            xLabelText = string("Region PC1"), yLabelText = string("Region PC2"),
+            showPlot = false)
+
+display(PCAmodel.PCAfig)
+
+# Add PC values to metadata for individuals included in PCA above:
+if flipPC1
+    PCAmodel.metadata.PC1 = -1 .* PCAmodel.values[1,:]
+else 
+    PCAmodel.metadata.PC1 = PCAmodel.values[1,:]
+end
+if flipPC2
+    PCAmodel.metadata.PC2 = -1 .* PCAmodel.values[2,:]
+else
+    PCAmodel.metadata.PC2 = PCAmodel.values[2,:]
+end
+PCAmodel.metadata.PC3 = PCAmodel.values[3,:]
+
+```
+
+# Plot PC1 vs. PC2:
+
+```{julia}
+f = CairoMakie.Figure()
+ax = Axis(f[1, 1],
+    title = "PC1 vs. PC2",
+    xlabel = "Region PC1", xlabelsize = 24,
+    ylabel = "Region PC2", ylabelsize = 24,
+    autolimitaspect = 1)
+hidedecorations!(ax, label = false, ticklabels = false, ticks = false) # hide background lattice
+for i in eachindex(groups_to_plot_PCA) 
+    selection = PCAmodel.metadata.Fst_group .== groups_to_plot_PCA[i]
+    CairoMakie.scatter!(ax, PCAmodel.metadata.PC1[selection], PCAmodel.metadata.PC2[selection], marker = :diamond, color = (group_colors_PCA[i], 0.6), markersize = 14, strokewidth=0.5, strokecolor = ("black", 0.7))
+end
+display(f)
+```
+
+# Plot PC1 vs. PC3:
+
+```{julia}
+f = CairoMakie.Figure()
+ax = Axis(f[1, 1],
+    title = "PC1 vs. PC3",
+    xlabel = "Region PC1", xlabelsize = 24,
+    ylabel = "Region PC3", ylabelsize = 24,
+    autolimitaspect = 1)
+hidedecorations!(ax, label = false, ticklabels = false, ticks = false) # hide background lattice
+for i in eachindex(groups_to_plot_PCA) 
+    selection = PCAmodel.metadata.Fst_group .== groups_to_plot_PCA[i]
+    CairoMakie.scatter!(ax, PCAmodel.metadata.PC1[selection], PCAmodel.metadata.PC3[selection], marker = :diamond, color = (group_colors_PCA[i], 0.6), markersize = 14, strokewidth=0.5, strokecolor = ("black", 0.7))
+end
+display(f)
+```
+
+
+# At chr 15 high HetVar region, there are only 5 clear haplogroups. Divide samples into those groups, based on PCA scores, and then calculate pi within and pi between
+
+```{julia}
+# Inspect Z chromosome PCA of low IndHet (< 1.75) individuals,
+# and specify group boundaries:
+
+clusterNames = ["virLud",
+                "nit",
+                "troch",
+                "obs",
+                "plumb"]
+
+clusterColors = ["green",
+                "grey",
+                "yellowgreen",
+                "orange",
+                "red"]
+
+vir_lud = (PCAmodel.metadata.PC1 .< -5)
+nit = (-5 .< PCAmodel.metadata.PC1 .< -2.5)
+troch = (-1 .< PCAmodel.metadata.PC1 .< 2.5) .& (PCAmodel.metadata.PC3 .< 1)
+obs = (0 .< PCAmodel.metadata.PC1 .< 2) .& (1 .< PCAmodel.metadata.PC3 .< 4)
+plumb = (5 .< PCAmodel.metadata.PC1)
+
+# check the individuals in each group
+PCAmodel.metadata.Fst_group[vir_lud]
+PCAmodel.metadata.Fst_group[nit]
+PCAmodel.metadata.Fst_group[troch]
+PCAmodel.metadata.Fst_group[obs]
+PCAmodel.metadata.Fst_group[plumb]
+
+clusterArray = [vir_lud nit troch obs plumb]
+
+# show numbers in each group
+sum(clusterArray, dims=1)
+
+# create vectors that indicate the groups and plot order for this analysis:
+clusterMembership = fill("none", nrow(PCAmodel.metadata))
+plotOrder = fill(-9, nrow(PCAmodel.metadata))
+for i in eachindex(clusterArray[1,:])
+    clusterMembership[clusterArray[:,i]] .= clusterNames[i]
+    plotOrder[clusterArray[:,i]] .= i
+end
+
+# Calculate allele freqs and sample sizes
+freqs, sampleSizes = getFreqsAndSampleSizes(genos_lowIndHetStan, clusterMembership, clusterNames)
+println("Calculated population allele frequencies and sample sizes")
+
+# NOTE THAT FOR Z CHR, SHOULD REALLY CORRECT FREQS AND SAMPLESIZE FOR SEX (BECAUSE ONE Z FEMALES AND 2 Z MALES)--MODIFY THE getFreqsAndSampleSizes FUNCTION.
+
+# Calculate per-site pi (within-group nucleotide distance)
+
+sitePi = getSitePi(freqs, sampleSizes)
+
+# calculate pairwise Dxy per site, using data in "freqs" and groups in "groups"
+
+Dxy, pairwiseDxyClusterNames = getDxy(freqs, clusterNames)
+
+Fst, FstNumerator, FstDenominator, pairwiseFstClusterNames = getFst(freqs, sampleSizes, clusterNames; among=false)  # set among to FALSE if no among Fst wanted (some things won't work without it) 
+
+# Now get averages of pi and Dxy for whole region:
+
+regionPiTable = DataFrame(cluster = clusterNames, pi = getRegionPi(sitePi))
+#= 5×2 DataFrame
+ Row │ cluster  pi         
+     │ String   Float64    
+─────┼─────────────────────
+   1 │ virLud   0.00892738
+   2 │ nit      0.00677711
+   3 │ troch    0.00707795
+   4 │ obs      0.0083953
+   5 │ plumb    0.00673292 =#
+
+regionDxyTable = DataFrame(cluster_pair = pairwiseDxyClusterNames, Dxy = getRegionDxy(Dxy))
+#= 10×2 DataFrame
+ Row │ cluster_pair  Dxy       
+     │ String        Float64   
+─────┼─────────────────────────
+   1 │ virLud_nit    0.032793
+   2 │ virLud_troch  0.03253
+   3 │ virLud_obs    0.0334515
+   4 │ virLud_plumb  0.041869
+   5 │ nit_troch     0.0388383
+   6 │ nit_obs       0.0393449
+   7 │ nit_plumb     0.0476769
+   8 │ troch_obs     0.0150106
+   9 │ troch_plumb   0.029365
+  10 │ obs_plumb     0.0297807 =#
+
+# Make a genotype-by-individual plot using all variable loci in the region,
+# by setting `Fst_cutoff` to super low value
+groupsToCompare = "vir_plumb"
+Fst_cutoff = -100 # super low to show all SNPs
+missingFractionAllowed = 0.1
+# in metadata, replace `Fst_group` column with cluster info (needed for the function below):
+PCAmodel.metadata.Fst_group = clusterMembership
+PCAmodel.metadata.plot_order = plotOrder
+
+# limit the SNPs to those with variants greater than 50% in 
+# at least one pop, and less than 50% in at least one pop.
+# (So for each column in `freqs`, the maximum should be > 0.5 
+# and the minimum should be < 0.5)
+selectedSNPs = (vec(maximum(freqs, dims=1)) .> 0.5) .& (vec(minimum(freqs, dims=1)) .< 0.5)
+genos_selectedSNPs = genos_lowIndHetStan[:, selectedSNPs]
+pos_selectedSNPs = pos_highHetVarRegion[selectedSNPs, :]
+Fst_selectedSNPs = Fst[:, selectedSNPs]
+freqs_selectedSNPs = freqs[:, selectedSNPs]
+
+# limit the number of individuals per group to plot
+numIndsToPlot = [15, 15, 15, 15, 15, 15]
+
+genosForGBI, indMetadataforGBI = limitIndsToPlot(clusterNames, numIndsToPlot, 
+                                            genos_selectedSNPs, PCAmodel.metadata;
+                                            sortByMissing = true)
+
+plotGenotypeByIndividual(regionInfo, pos_selectedSNPs,
+                genosForGBI, indMetadataforGBI, freqs_selectedSNPs, clusterNames, clusterColors;
+                missingFractionAllowed = missingFractionAllowed)
+```
 
 
 
